feat: refactor BookService to use getFirst for book deletion and clean up Review imports